# niche-create-guest-from-csv-script-cli

./: main.py  output.csv  output_invitations.csv  pyproject.toml
extracted_data/test/: test_invitations.csv
